[gd_scene load_steps=4 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://Map_3d.tscn" type="PackedScene" id=2]
[ext_resource path="res://Map_3d.gd" type="Script" id=3]

[node name="Main" type="Node"]

[node name="Lobby" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Start_Timer" type="Timer" parent="Lobby"]
wait_time = 2.0
one_shot = true

[node name="Map_3d" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Turn_Timer" type="Timer" parent="Map_3d"]
one_shot = true
[connection signal="timeout" from="Lobby/Start_Timer" to="Map_3d" method="_on_start_timer_complete"]
[connection signal="timeout" from="Map_3d/Turn_Timer" to="Map_3d" method="_on_plan_execution_complete"]
